media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6767
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - mountPath: /data
          name: data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config
      - name: data
        persistentVolumeClaim:
          claimName: media-data
